# rust-studies

./: .gitignore  Cargo.toml  build.rs
microservices_in_rust/ch02_microservice_using_hyper/hyper-microservice/: Cargo.toml
microservices_in_rust/ch02_microservice_using_hyper/hyper-microservice/src/: main.rs
microservices_in_rust/ch03_logging_and_configuration/: .env  Cargo.toml
microservices_in_rust/ch03_logging_and_configuration/src/: main.rs
microservices_in_rust/ch04_data_serialization/: Cargo.toml
microservices_in_rust/ch04_data_serialization/src/: color.rs  main.rs
rust_programming_by_example/tetris/: Cargo.toml  build.rs
rust_programming_by_example/tetris/src/: game_board.rs  main.rs  tetrimino.rs
src/: main.rs
