[package]
name = "ch03_logging_and_configuration"
version = "0.1.0"
authors = ["Rafael Sartor <rafaelmsartor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
rand = "0.5"
log = "0.4"
pretty_env_logger = "0.2"
dotenv = "0.13"
