[package]
name = "ch04_data_serialization"
version = "0.1.0"
authors = ["Rafael Sartor <rafaelmsartor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hyper = "0.12"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.10"
base64-serde = "0.3"
failure = "0.1"