[package]
name = "tetris"
version = "0.1.0"
authors = ["Rafael Sartor <rafaelmsartor@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.30.0"

[features]
default = ["sdl2/image"]