[package]
name = "hyper-microservice"
version = "0.1.0"
authors = ["Rafael Sartor <rafaelmsartor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4"
futures = "0.1"
hyper = "0.12"
regex = "1.0"
lazy_static = "1.0"
